<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="address_caption">Address</string>
    <string name="alt_check">Alt</string>
    <string name="app_name" translatable="false">MultiVNC</string>
    <string name="server_found">Found VNC Server</string>
    <string name="server_removed">VNC Server disappeared</string>
    <string name="restartMDNS">Restart Server Discovery</string>
    <string name="scale_msg">Scale now</string>
<string name="madeby">MultiVNC on Android is brought to you by Christian Beier.\n\nIt is based on android-vnc-viewer (http://code.google.com/p/android-vnc-viewer), with major cleanups and improvements done by Christian Beier.\n\nThe project home page is at https://github.com/bk138/multivnc .</string>
<string name="colormode_caption">Color Mode</string>
<string name="color_mode">Set Color Mode</string>
<string name="connect_button">Connect</string>
<string name="control_check">Ctrl</string>
<string name="delete_connection">Delete</string>
<string name="disconnect">Disconnect</string>
<string name="toggle_framebuffer_update">Toggle View</string>
<string name="toggle_mouse_buttons">Toggle Mouse Buttons</string>
<string name="toggle_pointer_highlight">Toggle Pointer Highlighting</string>
<string name="toggle_keyboard">Toggle Keyboard</string>

<string name="export_settings">Export</string>
<string name="export_settings_path">Export to file</string>
<string name="database_error_open">Error opening database!</string>
<string name="import_export_settings">Import/Export</string>
<string name="import_settings">Import</string>
<string name="import_settings_file_url">Import from file or URL</string>
    <string name="import_error_url">Improper URL given:</string>
    <string name="import_error_io">I/O error reading configuration</string>
    <string name="import_error_xml">XML or format error reading configuration</string>

<string name="info">Connection Info</string>
<string name="meta_key_title">Send Key Combo</string>
<string name="new_connection">New Connection</string>
<string name="nickname_caption">Bookmark</string>
<string name="discovered_servers">Discovered Servers</string>
<string name="bookmarks">Bookmarks</string>
<string name="savebookmark_button">Save Bookmark</string>
<string name="bookmark_saved">Bookmark saved!</string>
<string name="bookmark_invalid">This is not a valid bookmark anymore!</string>
<string name="password_caption">Password</string>
<string name="keep_password_button">Keep</string>
<string name="port_caption">Port</string>
<string name="repeater_caption">Repeater</string>
<string name="repeater_hint">For UltraVNC-style repeater address</string>
<string name="repeater_clear">Don\'t use repeater</string>
<string name="save_as_copy">Save as Copy</string>
    <string name="repeater_save">Save</string>
<!-- Send selected metakey -->
<string name="send_button">Send</string>
<string name="send_key_again">Send Key Combo Again</string>
<string name="shift_check">Shift</string>
<string name="shortcut_label">VNC Connection Shortcut</string>
    <string name="shortcut_no_entries">No bookmarks yet</string>
<string name="special_keys">Key Combo</string>
<string name="username_caption">Username</string>
<string name="username_hint">For Windows authentication</string>
<string name="editbookmark_title">Edit Bookmark</string>
<string name="enterbookmarkname">Please enter a bookmark name…</string>
<string name="bookmark_save_question">Do you want to bookmark this server?</string>
<string name="bookmark_delete_question">Are you sure you want to delete this bookmark?</string>
<string name="disconnect_question">Are you sure you want to disconnect?</string>
<string name="about">About</string>
<string name="help">Help</string>
<string name="edit">Edit</string>

    <string name="utils_title_error">Error!</string>

<string name="support_dialog_title">Please Support MultiVNC</string>
<string name="support_dialog_text">If you like MultiVNC, why not consider supporting its development? For the time being, you can do so easily by rating the app or by using PayPal. Thanks!</string>
<string name="support_dialog_yes">Yes, good idea!</string>
<string name="support_dialog_no">No, not now.</string>
<string name="support_dialog_neveragain">Never ask again!</string>

<string name="firstrun_help_dialog_title">Show Help?</string>
<string name="firstrun_help_dialog_text">Seems it\'s the first time you use MultiVNC. Do you want to read the app manual? It\'s not very long yet informative...</string>

<string name="pleaserate">If you like MultiVNC, why not show some love by clicking the heart?</string>
<string name="changelog_dialog_title">What\'s new…</string>
<string name="changelog_dialog_text">
<![CDATA[
<b>Version 1.7.x:</b>
    <ul>

          <li>1.7.7</li>
     	      <ul>
     	                 <li>Fixed possible crash on ChromeBox.</li>
     	      </ul>

         <li>1.7.6</li>
     	      <ul>
      	                 <li>Inform user when there are no bookmarks to create shortcuts with.</li>
     	                 <li>Fixed possible crash when importing settings.</li>
     	      </ul>

         <li>1.7.5</li>
     	      <ul>
     	                 <li>Fixed possible crash when closing the app.</li>
     	      </ul>

           <li>1.7.4</li>
     	      <ul>
     	                 <li>Fixed possible crash in cursor handling.</li>
     	      </ul>

           <li>1.7.3</li>
     	      <ul>
     	                 <li>Some updates to the server discovery module.</li>
     	                 <li>Fixed minor issues in german translation.</li>
     	      </ul>

           <li>1.7.2</li>
     	      <ul>
     	                 <li>Fixed another possible crash.</li>
     	                 <li>Added german translation.</li>
     	      </ul>

          <li>1.7.1</li>
     	      <ul>
     	                 <li>Fix crash on connection initialisation.</li>
     	      </ul>

          <li>1.7.0</li>
     	      <ul>
     	                 <li>Updated the UI theming to use the default look on the respective Android version.</li>
       	                 <li>Made the import/export UI more usable.</li>
     	                 <li>Updated the launcher icon to be more hi-res.</li>
     	                 <li>Removed the ad system.</li>
     	      </ul>
    </ul>
<b>Version 1.6.x:</b>
	<ul>
          <li>1.6.4</li>
     	             <ul>
     	                <li>Fix immediate crash upon connecting on some devices.</li>
     	      	  </ul>
           <li>1.6.3</li>
     	             <ul>
     	                <li>Fix hidden menu items on some devices.</li>
                        <li>Fix Zeroconf/Bonjour/mDNS VNC server discovery on Android 4.2 devices.</li>

     	      	  </ul>
             <li>1.6.2</li>
     	             <ul>
     	                <li>Hide Actionbar when there is a hardware menu button.</li>
                        <li>Removed broken hungarian translation.</li>

     	      	  </ul>
              <li>1.6.1</li>
     	             <ul>
     	                <li>Fixed ANR that could sometimes occur when connection broke.</li>
                        <li>Fixed crash in discovered servers list.</li>

     	      	  </ul>
     		 <li>1.6.0</li>
     	             <ul>
     	                <li>Added support for hardware keyboards and mice. Kudos to Kevin Pansky.</li>
     	                <li>Added copy&paste function to and from Android clipboard.</li>
     	                <li>Virtual mouse button click-and-drag now also works on Honeycomb and newer devices.</li>
			     		<li>A bit more screen real estate on ICS and newer devices by hiding the status bar.</li>

     	      	  </ul>
     </ul>
<b>Version 1.5.x:</b>
	<ul>
	        <li>1.5.2</li>
                      <ul>
	                      <li>Hopefully fix crash on dialog dismissal.</li>
	                  </ul>
		    <li>1.5.1</li>
                     <ul>
		                  <li>Prevent ActionBar from stealing keyboard focus.</li>
		             </ul>
     		 <li>1.5.0</li>
     	             <ul>
			     		 <li>Full IPv6 support on Honeycomb and newer!</li>
					     <li>Added help screen.</li>
			             <li>Improved touchpad mode.</li>
			     		 <li>Fixed \'Key Combo\' button being focused when soft keyboard was activated.</li>
			     	     <li>Fixed virtual mouse button toggling.</li>
			     	     <li>Fixed bookmarked connections.</li>
			     	     <li>Fixed ActionBar taking focus on soft keyboard toggle.</li>
                         <li>Fixed a lot of maybe-crash situations.</li>
			     	     <li>Removed broken flattr button.</li>
     	      	  </ul>
     </ul>

<b>Version 1.4.x:</b>
     		<ul>
     		 <li>1.4.10</li>
     		 <ul>
     		    <li>Added button to be able to rate the app.</li>
     		 </ul>

     		 <li>1.4.9</li>
             <ul>
     		    <li>Fix crash introduced by the 1.4.8 fix.</li>
     	     </ul>

     	     <li>1.4.8</li>
     	     <ul>
     	        <li>Fix an ANR error when pausing the app.</li>
     		 </ul>

     		 <li>1.4.7</li>
     		 <ul>
     		    <li>Fix hang after password entry. Should also work with bookmarks now.</li>
     		 </ul>

     		 <li>1.4.6</li>
     		 <ul>
     		    <li>Add menu item to toggle pointer highlighting.</li>
     	     </ul>

     		 <li>1.4.5</li>
     	     <ul>
     	         <li>Fix the 1.4.4 fix.</li>
     	     </ul>

     	     <li>1.4.4</li>
     	     <ul>
     	        <li>Fix crash on startup on Honeycomb or newer devices.</li>
     	     </ul>

     	     <li>1.4.3</li>
     	     <ul>
     	         <li> Hopefully fixed keyboard disappearing bug.</li>
     	     </ul>

     	     <li>1.4.2</li>
     	      <ul>
     	         <li>Fixed crash on mouse button press.</li>
     	      </ul>

     	     <li>1.4.1</li>
     	      <ul>
     	          <li>Fixed app not starting on Honeycomb devices.</li>
     	      </ul>

     	     <li>1.4.0</li>
     	             <ul>
			     		 <li>ICS and Tablet Support!</li>
			     		 <li>Added password prompt. Shown when no password was given but one is required.</li>
			     		 <li>Greatly improved key handling. Most special symbols work now.</li>
			     		 <li>Fixed a nasty app restart bug on Honeycomb and newer devices.</li>
			     	     <li>Fixed some possible crashes.</li>
     	      	  </ul>
     		</ul>
    ]]>

</string>
</resources>
