<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="10dip">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/import_settings_file_url"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/textImportUrl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:inputType="textUri"
            android:scrollHorizontally="true"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Button
            android:id="@+id/buttonImport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/import_settings" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/export_settings_path"
            android:textAppearance="?android:attr/textAppearanceMedium" />


        <EditText
            android:id="@+id/textExportPath"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:inputType="textUri"
            android:scrollHorizontally="true"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Button
            android:id="@+id/buttonExport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/export_settings" />

    </LinearLayout>
</ScrollView>
