<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical" >

    <!-- this is focusable to start with view focus here! -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="10dip" >

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dip" >

            <TableRow>

                <TextView
                    android:gravity="right|center_vertical"
                    android:paddingRight="10dip"
                    android:text="@string/nickname_caption"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/textNicknameBookmark"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:singleLine="true" />
            </TableRow>

            <TableRow>

                <TextView
                    android:gravity="right|center_vertical"
                    android:hint="localhost"
                    android:paddingRight="10dip"
                    android:text="@string/address_caption"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/textIPBookmark"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:singleLine="true" />
            </TableRow>

            <TableRow>

                <TextView
                    android:gravity="right|center_vertical"
                    android:paddingRight="10dip"
                    android:text="@string/port_caption"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/textPORTBookmark"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:singleLine="true"
                    android:text="5900" />
            </TableRow>

            <TableRow>

                <TextView
                    android:gravity="right|center_vertical"
                    android:paddingRight="10dip"
                    android:text="@string/colormode_caption"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/spinnerColorMode"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:prompt="@string/colormode_caption" />
            </TableRow>

            <TableRow>

                <TextView
                    android:gravity="right|center_vertical"
                    android:paddingRight="10dip"
                    android:text="@string/username_caption"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/textUsernameBookmark"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/username_hint"
                    android:singleLine="true" />
            </TableRow>

            <TableRow>

                <TextView
                    android:gravity="right|center_vertical"
                    android:paddingRight="10dip"
                    android:text="@string/password_caption"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal" >

                    <EditText
                        android:id="@+id/textPASSWORDBookmark"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:inputType="textPassword"
                        android:singleLine="true" />

                    <CheckBox
                        android:id="@+id/checkboxKeepPasswordBookmark"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:text="@string/keep_password_button" />
                </LinearLayout>
            </TableRow>

            <TableRow>

                <TextView
                    android:gravity="right|center_vertical"
                    android:paddingRight="10dip"
                    android:text="@string/repeater_caption"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/textRepeaterIdBookmark"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:hint="@string/repeater_hint"
                    android:singleLine="true" />
            </TableRow>
        </TableLayout>
        <!--
			<TextView
			    android:layout_height="wrap_content"
			    android:layout_width="wrap_content"
			    android:layout_gravity="left|center_vertical"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:text="@string/color_format_caption"
			/>
			<Spinner 
			    android:id="@+id/colorformat" 
			    android:layout_width="fill_parent"
				android:layout_height="wrap_content"
			/>
        -->


        <!--
			<LinearLayout
				android:orientation="horizontal"
				android:padding="10dp"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				>
				<TextView
					android:text="@string/force_full_check"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					/> 
				<RadioGroup
					android:id="@+id/groupForceFullScreen"
					android:orientation="horizontal"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					>
					<RadioButton
						android:id="@+id/radioForceFullScreenAuto"
					    android:text="@string/auto"
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content"
					/>
					<RadioButton
						android:id="@+id/radioForceFullScreenOn"
					    android:text="@string/on"
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content"
					/>
					<RadioButton
						android:id="@+id/radioForceFullScreenOff"
					    android:text="@string/off"
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content"
					/>
				</RadioGroup>
			</LinearLayout>
        -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/buttonSaveBookmark"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_margin="10dip"
                android:layout_weight="1"
                android:text="@string/save" />

            <Button
                android:id="@+id/buttonCancelBookmark"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_margin="10dip"
                android:layout_weight="1"
                android:text="@android:string/cancel" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>