<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dip"
        android:paddingTop="10dip"
        android:text="@string/new_connection"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <androidx.fragment.app.FragmentContainerView
        android:name="com.coboltforge.dontmind.multivnc.ui.ConnectionEditFragment"
        android:id="@+id/connectionEditFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!--
			<TextView
			    android:layout_height="wrap_content"
			    android:layout_width="wrap_content"
			    android:layout_gravity="left|center_vertical"
				android:textAppearance="?android:attr/textAppearanceMedium"
				android:text="@string/color_format_caption"
			/>
			<Spinner 
			    android:id="@+id/colorformat" 
			    android:layout_width="fill_parent"
				android:layout_height="wrap_content"
			/>
    -->


    <!--
			<LinearLayout
				android:orientation="horizontal"
				android:padding="10dp"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				>
				<TextView
					android:text="@string/force_full_check"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					/> 
				<RadioGroup
					android:id="@+id/groupForceFullScreen"
					android:orientation="horizontal"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					>
					<RadioButton
						android:id="@+id/radioForceFullScreenAuto"
					    android:text="@string/auto"
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content"
					/>
					<RadioButton
						android:id="@+id/radioForceFullScreenOn"
					    android:text="@string/on"
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content"
					/>
					<RadioButton
						android:id="@+id/radioForceFullScreenOff"
					    android:text="@string/off"
					    android:layout_width="wrap_content"
					    android:layout_height="wrap_content"
					/>
				</RadioGroup>
			</LinearLayout>
    -->

    <Button
        android:id="@+id/buttonSaveBookmark"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dip"
        android:text="@string/savebookmark_button" />

    <Button
        android:id="@+id/buttonGO"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:text="@string/connect_button"
        android:textAppearance="@style/TextAppearance.AppCompat.Large.Inverse" />

</merge>